[tool.poetry]
name = "edge_auctions"
version = "2.0.0"
description = "Uploads and auctions manager for EDGE"
authors = ["Maksim Burmistrov <burmistrovm@live.ru>"]

[tool.poetry.scripts]
start = "gunicorn -c gunicorn.py"

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.8"
bcrypt = "^3.2"
beautifulsoup4 = "^4.11"
celery = "^5.2"
exif = "^1.3"
flask = "^2.1"
Flask_SQLAlchemy = "^2.5"
jsonschema = "^4.7"
marshmallow = "^3.17"
Pillow = "^9.2"
psycopg2-binary = "^2.9"
python-dateutil = "^2.8"
python-multipart = "^0.0"
pyzbar = "^0.1"
requests = "^2.28"
sqlalchemy = "^1.4"
uvicorn = "^0.18"
vk = "^3.0"
webargs = "^8.2"
xlsxwriter = "^3.0"
apispec = {extras = ["flask"], version = "^5.2.2"}
flasgger = "^0.9.5"
apispec-webframeworks = "^0.5.2"
argon2-cffi = "^21.3.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
mypy = "^0.971"
pylint = "^2.14.5"
sqlalchemy-stubs = "^0.4"
black = "^22.6.0"
types-PyYAML = "^6.0.11"
types-requests = "^2.28.8"
types-python-dateutil = "^2.8.19"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py39"]
skip-string-normalization = true

[tool.isort]
profile = "black"
src_paths = ["auctions"]
force_single_line = true
