[tool.poetry]
name = "edge_auctions"
version = "2.0.0"
description = "Uploads and auctions manager for EDGE"
authors = ["Maksim Burmistrov <burmistrovm@live.ru>"]

[tool.poetry.scripts]
start = "gunicorn -c gunicorn.py"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.9"
argon2-cffi = "^21.3"
beautifulsoup4 = "^4.11"
cryptography = "^39.0"
dramatiq = {extras = ["redis", "watch"], version = "^1.13.0"}
exif = "^1.5"
flask = "^2.2"
flask-cors = "^3.0"
marshmallow = "^3.19"
pillow = "^9.4"
psycopg2-binary = "^2.9"
python-dateutil = "^2.8"
pyvips = "^2.2.1"
pyyaml = "^6.0"
pyzbar = "^0.1"
requests = "^2.28"
sqlalchemy = "^2.0.6"
uvicorn = "^0.20"
vk = "^3.0"
webargs = "^8.2"
openpyxl = "^3.0.10"
authlib = "^1.2.0"
python-dotenv = "^0.21.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
auth0-python = "^4.0.0"
pycryptodome = "^3.17"
flask-socketio = "^5.3.2"
gevent-websocket = "^0.10.1"
pywebpush = "^1.14.0"
apscheduler = "^3.10.0"
loguru = "^0.6.0"
dependency-injector = "^4.41.0"
flask-injector = "^0.14.0"
firebase-admin = "^6.1.0"

[tool.poetry.dev-dependencies]
black = "^22.12"
isort = "^5.11"
mypy = ">=0.900,<1.0"
pylint = "^2.15"
types-python-dateutil = "^2.8"
types-pyyaml = "^6.0"
types-requests = "^2.28"
types-sqlalchemy = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py39"]
skip-string-normalization = true

[tool.isort]
profile = "black"
src_paths = ["auctions"]
force_single_line = true
